--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/pink-transparent-robot.png" />
+    <link rel="icon" href="public/pink-transparent-robot.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Luv + Krishi Wedding">
+    <meta property="og:description" content="Information about wedding events">
+    <meta property="og:image" content="public/luv-krishi.jpg">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Wedding Website"
+      content="Luv + Krishi's wedding website"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/pink-transparent-robot.png" />
+    <link rel="apple-touch-icon" href="public/pink-transparent-robot.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="public/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
