preload custom fonts

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="public/pink-transparent-robot.png" />
+    <link rel="preload" href="public/dreamland/dreamland.woff2" as="font" type="font/woff2" onload="this.onload=null;this.rel='stylesheet'" crossorigin />
+    <link rel="preload" href="public/open-sans/OpenSans-Light.woff2" as="font" type="font/woff2" onload="this.onload=null;this.rel='stylesheet'" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Luv + Krishi Wedding">
